--- a/style1.css
+++ b/style1.css
@@ -2,8 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Bangers', cursive;
-    font-family: 'Modak', cursive;
+    font-family: 'Oswald';
 }
 header{
     width: 100%;
@@ -13,18 +12,29 @@ header{
     animation: animate 30s ease-in-out infinite; 
 }
 @keyframes animate{
-    0%{background-image:url('img/545918.jpg');}
-    20%{background-image:url('img/d.jpg');}
-    40%{background-image:url('img/H.jpg');}
-    60%{background-image:url('img/S.png');}
-    80%{background-image:url('img/MH.png');}
-    100%{background-image:url('img/wp1860707.png');}
+    0%{background-image:url('img/tg.jpg');}
+    20%{background-image:url('img/dn.jpg');}
+    40%{background-image:url('img/hxh.png');}
+    60%{background-image:url('img/sao.png');}
+    80%{background-image:url('img/mha.png');}
+    100%{background-image:url('img/re.png');}
 
 }
+
+@keyframes changetext{
+    0%{content:"Tokyo Ghoul";}
+    20%{content:"Death Note";}
+    40%{content:"Hunter X Hunter";}
+    60%{content:"Sword Art online";}
+    80%{content:"My Hero Academia";}
+    100%{content:" Re:Zero ";}
+}
+
+
 nav{
     width: 100%;
     height: 15vh;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.4);
     color: white; display: flex; justify-content:space-between;
     align-items: center;
     text-transform: uppercase;
@@ -119,17 +129,8 @@ section .btn2{
     content: '';
     animation: changetext 30s infinite ease-in-out;
     color: #00b894;
-    font-family: 'Bangers', cursive;
-    letter-spacing: 5px;
-    word-spacing: 1rem;
+    font-family: 'Oswald', cursive;
+   
 
     
-}
-@keyframes changetext{
-    0%{content:"Tokyo Ghoul";}
-    20%{content:"Death Note";}
-    40%{content:"Hunter X Hunter";}
-    60%{content:"Sword Art online";}
-    80%{content:"My Hero Academia";}
-    100%{content:" Re:Zero ";}
 }
